<resources>
    <string name="app_name">Milan User</string>
    <string name="welcome">Welcome</string>
    <string name="setting">Setting</string>
    <string name="uploadPhoto">Upload Photograph</string>


    <!-- For the missing child -->
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="description">Description :</string>
    <string name="identification">Identification Marks :</string>
    <string name="contact">Contact :</string>
    <string name="incharge">Officer Incharge :</string>
</resources>
